Fixes #6 - Add MIT license

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "CSSMatrix",
   "description": "A CSSMatrix shim for 3D tranformation matrices",
   "version": "0.1.1",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git://github.com/arian/CSSMatrix.git"
