- Fixed missing argument glob - Added method "forceMatrix2D" to get a 2D matrix - Raised version to 0.1.2 - Added comment block inside CSSMatrix with metadata

--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
 	"name": "CSSMatrix",
-	"version": "0.1.1",
+	"version": "0.1.2",
 	"authors": [
 		"Martijn van Beek <martijn@blueberry.nl>",
 		"Arian Stolwijk"
 	],
-	"description": "HTML5 Library",
+	"description": "CSSMatrix shim",
 	"license": "MIT",
 	"ignore": [
 		"**/.*",
